@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #3873: Speed up unpickling from file objects which have a peek()
+  method.
+
 - Issue #10075: Add a session_stats() method to SSLContext objects.
 
 - Issue #9948: Fixed problem of losing filename case information.
